After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733720 - videodecoder: output should not have DTS
videodecoder: output should not have DTS
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.4.0
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-25 09:25 UTC by Jan Alexander Steffens (heftig)
Modified: 2014-08-11 08:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.08 KB, patch)
2014-08-07 13:32 UTC, Jan Alexander Steffens (heftig)
committed Details | Review

Description Jan Alexander Steffens (heftig) 2014-07-25 09:25:00 UTC
avdec_h264 outputs raw video buffers with both PTS and DTS set. Raw video streams should not have decode timestamps.

gst-libav 1.4.0 with built-in libav
Comment 1 Jan Alexander Steffens (heftig) 2014-08-07 08:21:12 UTC
Any comment? Not sure how this should be patched. Maybe it should apply to all decoders?
Comment 2 Sebastian Dröge (slomo) 2014-08-07 08:37:18 UTC
The video decoder base class should probably make sure that no DTS is set on any buffers, but gst-libav also should not set them to begin with
Comment 3 Jan Alexander Steffens (heftig) 2014-08-07 08:38:15 UTC
GstVideoDecoder (gst-plugins-base) has these lines:

  /* set PTS and DTS to both the PTS for decoded frames */
  GST_BUFFER_PTS (output_buffer) = frame->pts;
  GST_BUFFER_DTS (output_buffer) = frame->pts;
  GST_BUFFER_DURATION (output_buffer) = frame->duration;
Comment 4 Nicolas Dufresne (ndufresne) 2014-08-07 13:14:27 UTC
Yes, I think it should set the DTS = GST_CLOCK_TIME_NONE there. I'd be careful before pushing that to 1.4, it might make other bugs appears. But in 1.5 we should definitely do that. Want to (know how) to provide a patch ?
Comment 5 Jan Alexander Steffens (heftig) 2014-08-07 13:32:47 UTC
Created attachment 282812 [details] [review]
patch
Comment 6 Sebastian Dröge (slomo) 2014-08-11 08:40:48 UTC
commit 8a1f8623fa1ad5b65bd057216f7ab19fcab16874
Author: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
Date:   Thu Aug 7 10:44:03 2014 +0200

    videodecoder: Don't set decoding timestamps on raw video
    
    https://bugzilla.gnome.org/show_bug.cgi?id=733720