videodecoder: Don't set decoding timestamps on raw video

https://bugzilla.gnome.org/show_bug.cgi?id=733720